--- a/src/main/resources/googlemap.html
+++ b/src/main/resources/googlemap.html
@@ -30,8 +30,7 @@
         var myLatLng = {lat: x, lng: y};
         var marker = new google.maps.Marker({
             position: myLatLng,
-            map: document.map,
-            icon: 'volcano.png'
+            map: document.map
         });
     }
 
@@ -54,7 +53,7 @@
         var marker = new google.maps.Marker({
             position: myLatLng,
             map: document.map,
-            icon: 'blue_dot.png'
+            icon: 'https://wartsila-reports.studio.crasman.fi/pub/web/images/icon-gri-blue-dot.png'
         });
     }
 
