--- a/src/main/resources/googlemap.html
+++ b/src/main/resources/googlemap.html
@@ -27,10 +27,16 @@
 
 
     document.addVolcanoMarker = function addMarker(x, y) {
-        var myLatLng = {lat: x, lng: y};
-        var marker = new google.maps.Marker({
-            position: myLatLng,
-            map: document.map
+        var latLng = {lat: x, lng: y};
+        var circle = new google.maps.Circle({
+            strokeColor: '#FF0000',
+            strokeOpacity: 0.8,
+            strokeWeight: 2,
+            fillColor: '#FF0000',
+            fillOpacity: 0.35,
+            map: document.map,
+            center: latLng,
+            radius: 40000
         });
     }
 
