must use an url for the icon; update diameter in readme, rebuild artifact.

--- a/src/main/resources/googlemap.html
+++ b/src/main/resources/googlemap.html
@@ -59,7 +59,7 @@
         var marker = new google.maps.Marker({
             position: myLatLng,
             map: document.map,
-            icon: 'blue_dot.png'
+            icon: 'https://wartsila-reports.studio.crasman.fi/pub/web/images/icon-gri-blue-dot.png'
         });
     }
 
